Fixed mobile menu spacing and glitches

--- a/style.css
+++ b/style.css
@@ -42,10 +42,6 @@ margin-bottom:17px;
 clear:both;
 }
 
-.grey{
-background:#ddd;
-padding:1px;
-}
 
 /* --Frame Tags for smaller devices-- */
 
@@ -213,6 +209,9 @@ border:1px solid #ddd;
 padding:14px;
 border-radius:3px;
 box-shadow: 0px 5px 5px grey;
+}
+h1:first-of-type{
+margin-top:65px;
 }
 }
 
